eclat-compiler/tests/good/wcet/w1.ecl
(* ./eclat -relax *)

let main () =
  let x = create<45>() in
  set(x,0,42) ;;

(* val main : (unit -[1]-> unit) *)